--- a/PetStore/src/main/webapp/WEB-INF/web.xml
+++ b/PetStore/src/main/webapp/WEB-INF/web.xml
@@ -1,6 +1,8 @@
-<!-- <!DOCTYPE web-app PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 
-	2.3//EN" "http://java.sun.com/dtd/web-app_2_3.dtd" > -->
-<web-app >
+<web-app id="WebApp_ID" version="2.4"
+	xmlns="http://java.sun.com/xml/ns/j2ee"
+	xmlns:xsi="http://www.w3.org/2001/XMlSchema-instance"
+	xsi:schemalocation="http://java.sun.com/xml/ns/j2ee
+	http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
 
 	<display-name>Archetype Created Web Application</display-name>
 	<servlet>
@@ -9,15 +11,11 @@
 
 	</servlet>
 
-	<servlet-mapping>
-		<servlet-name>dispatcher</servlet-name>
-		<url-pattern>/</url-pattern>
-	</servlet-mapping>
+	
 	<context-param>
 			<param-name>contextConfigLocation</param-name>
 			<param-value>
-			
-				/WEB-INF/dispatcher-servlet.xml
+			/WEB-INF/dispatcher-servlet.xml,/WEB-INF/spring-security.xml
 			</param-value>
 		</context-param>
 		<listener>
@@ -25,14 +23,19 @@
 				org.springframework.web.context.ContextLoaderListener
 			</listener-class>
 		</listener>
-		<!-- <filter>
+		
+	<servlet-mapping>
+		<servlet-name>dispatcher</servlet-name>
+		<url-pattern>/</url-pattern>
+	</servlet-mapping>
+		 <filter>
 			<filter-name>springSecurityFilterChain</filter-name>
 			<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
 		</filter>
 		<filter-mapping>
 			<filter-name>springSecurityFilterChain</filter-name>
 			<url-pattern>/*</url-pattern>
-		</filter-mapping> --> -->
+		</filter-mapping> 
 
 
 </web-app>
